--- a/src/garden.html
+++ b/src/garden.html
@@ -1,49 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>5 Gorgeous Garden Homes</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css" rel="stylesheet">
+
 </head>
-<body bgcolor="yellow">
-<h1>5 Gorgeous Garden Homes</h1>
-<p>Whether you’re looking for a grand English estate or a pristine patch of flowers, your own private eden is waiting.</p>
-<p><b>BY JEFF KOYEN</b>ORIGINALLY PUBLISHED ON APRIL 14, 2016|MANSION GLOBAL|
- SAVE ARTICLE
-</p>
-<p>In San Casciano in Val di Pesa FI, Italy, several exquisite gardens are spread across 10 acres that also happen to include a 13th-century Renaissance villa.
-CHRISTIE’S INTERNATIONAL REAL ESTATE</p>
-<p>In quite a few parts of the world, spring has sprung. Or at least spring is well on its way — and its promise of pretty things will get us through lingering rainy mornings of wet galoshes and overworked umbrellas.</p>
-<p>To get in the springtime mood, Mansion Global rounded up five gorgeous garden properties currently on the market. They run the gamut from a traditional English estate garden to a meandering private paradise of 5,000 azaleas. All are available to interested buyers — click on the links to view the complete listings.</p>
-<h2>GORGEOUS GARDENS ON THE MARKET:</h2>
-<h3>SAN CASCIANO IN VAL DI PESA, TUSCANY, ITALY</h3>
-<img src="garden1.jpeg">
-Christie’s International Real Estate
 
-<h3>PRICE:<br>
-$19.57 million
-</h3>
-<p>Dating back to the 13th century, this Chianti Classico Renaissance villa comes with history to spare. Once used as a girls’ convent, and more recently home to Dutch painter Karel Appel, the estate sits on 10 acres surrounded by tranquil countryside. Several gardens pepper the property, including the finely sculptured hedges shown above</p>
-<h2>GREAT NECK, NEW YORK</h2>
-<img src="garden2.jpg">
-Coldwell Banker Residential Brokerage - Tristates<br>
-PRICE: $100 million<br>
-<p>One might imagine that three enormous residences on eight acres wouldn’t leave much room for the gardens. Not so at this palatial compound in Great Neck, New York — a stone’s throw from the city — where three magnificent fountains serve as the focal point of the bold private garden that gives structure to the sprawling property.</p>
-<h2>ESCARPMENT ESTATES, CALGARY, CANADA</h2>
-<img src="garden3.jpeg">
-Sotheby’s International Realty Canada<br>
-<h3>PRICE: Upon request</h3>
-<p>Not every property needs three massive fountains to announce itself. At this French Manor just east of the Canadian Rockies, designed by Arthur P. Fishman — more famous for his work on hotels, private jets and yachts — visitors are welcomed by an antique water fountain (shown) bought at auction in New Orleans after Hurricane Katrina. The proper French gardens are no less impressive and feature hundreds of rose bushes and a year-round gazebo.</p>
-<h2>EMERALD LAKE ESTATE, MAGNOLIA, TEXAS</h2>
-<img src ="garden4.jpeg">
-Kuper Sotheby’s International Realty<br>
-<h3>PRICE: $18.75 million</h3>
-<p>Texans aren’t known for their half measures, and this 185-acre private estate is no exception. While the Mediterranean-style main house is modest, at just 4,200 square feet, it’s the nine acres of Japanese gardens and seven acres of botanical gardens — with more than 5,000 azaleas — that make this property such an eye-catcher. The current owners are so proud of their gardens that they open up the property to local garden clubs for an annual “Azalea Walk” every spring.</p>
-<h2>THE ABBOTSWOOD ESTATE, GLOUCESTERSHIRE, ENGLAND</h2>
-<img src="garden5.jpg">
-Knight Frank<br>
-<h3>PRICE: Upon request</h3>
-<p>Ultimately, there’s nothing quite like a grand English garden. Where better to find one than deep in the English countryside? This traditional estate in Stow-on-the-Wold was rumored to have been bought by David and Victoria Beckham in 2015 (for about $38 million), but it remains on the market. The renowned gardens are just one highlight of the property’s 774 acres, which feature 13 farmhouses and cottages.</p>
-<h2>MORE FROM MANSION GLOBAL:</h2>
-
-
+<body>
+    
+    
 
 </body>
+
 </html>
