--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
-<body background="images/home.jpg">
+<body>
 
     <div id="header"></div>
 
