--- a/src/non-veg.html
+++ b/src/non-veg.html
@@ -4,37 +4,31 @@
     <title>non-vegetarian</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bootstrap4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bootstrap4/css/style.css">
-  <script src="bootstrap4/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <script src="../assets/js/bootstrap.min.js"></script>
 
 </head>
-<body background="images/home.jpg">
+<body>
 <div class="container">
-<div class="container-fluid">
-<h2>BBQ-Chicken-Skewers</h2>
-<img src="Chicken Skewers.jpg">
-<h2>Beer Chicken Tartar</h2>
-<img src="Beer Chicken Tartar.jpg">
-<h2>Bhatti da Murga Pindiwala</h2>
-<img src="Bhatti da Murga Pindiwala.jpg">
-<h2>Bhuna Masala Chicken Wings</h2>
-<img src="Bhuna Masala Chicken Wings.jpg">
-<h2>bikers chicken</h2>
-<img src="bikers chicken.jpg">
-<h2>Cheats Chicken Biryani</h2>
-<img src="Cheats Chicken Biryani.jpg">
-<h2>Chicken and Mushroom Lasagna</h2>
-<img src="Chicken and Mushroom Lasagna.jpg">
-<h2>Chicken Badaam Roll</h2>
-<img src="Chicken Badaam Roll.jpg">
-<h2>Chicken Cafreal</h2>
-<img src="Chicken Cafreal.jpg">
-<h2>Chicken Skewers</h2>
-<img src="Chicken Skewers.jpg">
-
-
-</div>
+  <div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/aloe vera1.jpg" height=200 > <strong>Aloevera 1</strong> </div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/aloe vera2.jpg" height=200 ><strong>somerecipe</strong> </div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/aloe vera3.jpg" height=200 ><strong>somerecipe</strong></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/aloe vera4.jpg" height=200 ><strong>somerecipe</strong></div>
+  </div>
+  <div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/aloe vera5.jpg" height=200 ><strong>somerecipe</strong></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/aloe vera6.jpg" height=200 ><strong>somerecipe</strong></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/Bhatti da Murga Pindiwala.jpg" height=200 ><strong>somerecipe</strong></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/Bhuna Masala Chicken Wings.jpg" height=200 ><strong>somerecipe</strong></div>
+  </div>
+  <div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/bikers chicken.jpg" height=200 ><strong>somerecipe</strong></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/Cheats Chicken Biryani.jpg" height=200 ><strong>somerecipe</strong></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/Chicken Cafreal.jpg" height=200 ><strong>somerecipe</strong></div>
+    <div class="col-lg-3 col-md-3 col-sm-3 card" style="padding: 1%;"> <img style="padding: 1%;" src="../assets/img/chinese food.jpg" height=200 ><strong>somerecipe</strong></div>
+  </div>
 </div>
 </body>
 </html>
